--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-psycopg2-binary>=2.9.11,
-dj-database-url>=3.0.1,
-faker>=37.12.0,
-Django>=5.2.7,
+psycopg2-binary>=2.9.11
+dj-database-url>=3.0.1
+faker>=37.12.0
+Django>=5.2.7
